--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,35 @@
     transform: rotate(360deg);
   }
 }
+
+/*** css perso ****/
+.App-logo-bis {
+  animation: App-logo-spin-bis infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App p {
+  font-style: 1rem;
+  font-weight: bold;
+}
+
+.btnApp {
+  font-size: 1rem;
+  padding: 10px 15px 10px 15px;
+  border-radius: 5px;
+  margin-top: 30px;
+  background-color: #61DAFB;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+@keyframes App-logo-spin-bis {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
